Fix to margins with sizing on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -355,6 +355,7 @@ source, img {
     }
 
     .content {
+        width: calc(100% - 30px);
         margin: 15px;
     }
 }
